# IVM

./: CMakeLists.txt  README.md  example.txt
include/ivm/: deltaprocessor.h  helperfunctions.h  ivmprocessor.h  naiveprocessor.h  relation.h  skewprocessor.h  skewrelation.h  view.h  viewprocessor.h
plots/: 3000-updates-naive-q3.csv  3000-updates-naive-q4.csv  3000-updates-naive-q5.csv  delta-q3.csv  delta-q4.csv  delta-q5.csv  plot_throughput.py  view-q3.csv  view-q4.csv  view-q5.csv
src/: deltaprocessor.cpp  helperfunctions.cpp  ivmprocessor.cpp  main.cpp  naiveprocessor.cpp  relation.cpp  skewprocessor.cpp  skewrelation.cpp  view.cpp  viewprocessor.cpp
